<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.aerospike</groupId>
    <artifactId>aerospike-parent</artifactId>
    <version>7.2.1</version>
  </parent>
  <artifactId>aerospike-client</artifactId>
  <packaging>jar</packaging>

  <name>aerospike-client</name>

  <dependencies>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-transport</artifactId>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-transport-native-epoll</artifactId>
      <classifier>linux-x86_64</classifier>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-transport-native-kqueue</artifactId>
      <classifier>osx-x86_64</classifier>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>io.netty.incubator</groupId>
      <artifactId>netty-incubator-transport-native-io_uring</artifactId>
      <classifier>linux-x86_64</classifier>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-handler</artifactId>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.gnu</groupId>
      <artifactId>gnu-crypto</artifactId>
      <version>2.0.1</version>
    </dependency>

    <dependency>
      <groupId>org.luaj</groupId>
      <artifactId>luaj-jse</artifactId>
    </dependency>

    <dependency>
      <groupId>org.mindrot</groupId>
      <artifactId>jbcrypt</artifactId>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>${project.basedir}/src</sourceDirectory>
    <resources>
      <resource>
        <directory>${project.basedir}/src/resources</directory>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
              <source>21</source>
              <target>21</target>
          </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-my-jar-with-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <doclint>none</doclint>
          <reportOutputDirectory>${basedir}</reportOutputDirectory>
          <doctitle>Aerospike Java Client</doctitle>
          <show>public</show>
          <splitindex>true</splitindex>
          <bottom>Copyright &#169; 2012&#x2013;{currentYear} Aerospike, Inc. All rights reserved.</bottom>
          <sourcepath>${basedir}/src</sourcepath>
          <sourceFileIncludes>
            <include>com/aerospike/client/*</include>
            <include>com/aerospike/client/cdt/*</include>
            <include>com/aerospike/client/listener/*</include>
            <include>com/aerospike/client/command/ParticleType.java</include>
            <include>com/aerospike/client/exp/*</include>
            <include>com/aerospike/client/operation/*</include>
            <include>com/aerospike/client/policy/*</include>
            <include>com/aerospike/client/task/*</include>
            <include>com/aerospike/client/admin/Privilege.java</include>
            <include>com/aerospike/client/admin/PrivilegeCode.java</include>
            <include>com/aerospike/client/admin/Role.java</include>
            <include>com/aerospike/client/admin/User.java</include>
            <include>com/aerospike/client/async/AsyncIndexTask.java</include>
            <include>com/aerospike/client/async/EventLoop.java</include>
            <include>com/aerospike/client/async/EventLoopBase.java</include>
            <include>com/aerospike/client/async/EventLoops.java</include>
            <include>com/aerospike/client/async/EventPolicy.java</include>
            <include>com/aerospike/client/async/Monitor.java</include>
            <include>com/aerospike/client/async/NettyEventLoop.java</include>
            <include>com/aerospike/client/async/NettyEventLoops.java</include>
            <include>com/aerospike/client/async/NettyTlsContext.java</include>
            <include>com/aerospike/client/async/NioEventLoop.java</include>
            <include>com/aerospike/client/async/NioEventLoops.java</include>
            <include>com/aerospike/client/async/Throttle.java</include>
            <include>com/aerospike/client/async/Throttles.java</include>
            <include>com/aerospike/client/cluster/ClusterStats.java</include>
            <include>com/aerospike/client/cluster/ConnectionStats.java</include>
            <include>com/aerospike/client/cluster/Node.java</include>
            <include>com/aerospike/client/cluster/NodeStats.java</include>
            <include>com/aerospike/client/cluster/ThreadDaemonFactory.java</include>
            <include>com/aerospike/client/lua/LuaConfig.java</include>
            <include>com/aerospike/client/lua/LuaCache.java</include>
            <include>com/aerospike/client/query/Filter.java</include>
            <include>com/aerospike/client/query/IndexCollectionType.java</include>
            <include>com/aerospike/client/query/IndexType.java</include>
            <include>com/aerospike/client/query/PartitionFilter.java</include>
            <include>com/aerospike/client/query/QueryListener.java</include>
            <include>com/aerospike/client/query/RecordSet.java</include>
            <include>com/aerospike/client/query/RegexFlag.java</include>
            <include>com/aerospike/client/query/ResultSet.java</include>
            <include>com/aerospike/client/query/Statement.java</include>
            <include>com/aerospike/client/util/ThreadLocalData.java</include>
          </sourceFileIncludes>
        </configuration>
      </plugin>
    </plugins>

  </build>

</project>
